07-classfile-classloader/01 ClassFile 解析完成(第 3 批第一篇): 入口链 KlassFactory->ClassFileParser 构造内 parse_stream(magic/版本/常量池/字段/方法/属性 顺序)、常量池 15 种 tag switch(Long/Double 双槽/Utf8->SymbolTable 批量分配/只登记不解析)、FieldInfo 六槽+五类分配桶、injected fields、Code 属性读取、BootstrapMethods/NestHost/NestMembers、fill_instance_klass 所有权转移;实证 javap/hexdump/class+load(CDS);大纲回填 12 处漂移(parseClassFile 编造/FieldLayoutBuilder 编造/行号全漂移/六桶错)